--- a/portfolio.html
+++ b/portfolio.html
@@ -226,13 +226,72 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer-container container">
-        <a class="logo logo-footer link" href="./index.html"
-          >Web<span class="logo-footer-color">Studio</span></a
-        >
-        <p class="footer-description">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-info">
+          <a class="logo logo-footer link" href="./index.html"
+            >Web<span class="logo-footer-color">Studio</span></a
+          >
+          <p class="footer-description">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media">
+          <p class="social-media-title">Social media</p>
+          <ul class="social-media-list list">
+            <li class="social-meadia-item">
+              <a
+                href=""
+                class="social-media-link"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="instagram icon"
+              >
+                <svg class="social-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-meadia-item">
+              <a
+                href=""
+                class="social-media-link"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="twitter icon"
+              >
+                <svg class="social-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-meadia-item">
+              <a
+                href=""
+                class="social-media-link"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="facebook icon"
+              >
+                <svg class="social-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-meadia-item">
+              <a
+                href=""
+                class="social-media-link"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="linkedin icon"
+              >
+                <svg class="social-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
