--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <ul class="features-list list">
             <li class="features-list-item">
               <div class="features-icon-container">
-                <svg claas="features-icon" width="64" height="64">
+                <svg class="features-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -84,7 +84,7 @@
             </li>
             <li class="features-list-item">
               <div class="features-icon-container">
-                <svg claas="features-icon" width="64" height="64">
+                <svg class="features-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -96,7 +96,7 @@
             </li>
             <li class="features-list-item">
               <div class="features-icon-container">
-                <svg claas="features-icon" width="64" height="64">
+                <svg class="features-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
