--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </li>
             <li class="features-list-item">
               <div class="features-icon-container">
-                <svg claas="features-icon" width="64" height="64">
+                <svg class="features-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
