--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
       </section>
       <!-- Areas of work -->
-      <section class="projects section">
+      <section class="projects">
         <div class="container">
           <h2 class="projects-title">What are we doing</h2>
           <ul class="projects-list list">
